app/static/css/main.css
body{
  font-family: 'Open Sans', sans-serif;
  min-height: 400px;
  color: white;
}

.table {
  font-family: Arial;
}

#logobrand{
  height: 60px;
}

.masthead {
  height: 100vh;
  min-height: 500px;
  background-image: url(/static/headerphoto.jpg);
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}

.navbar-toggler {
  border: none;
}

#pizza {
  height: 100%;
  min-height: 500px;
  padding-bottom: 50px;
  background-image: url(/static/pizza.jpg);
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}

#grill {
  height: 100%;
  min-height: 500px;
  padding-bottom: 50px;
  background-image: url(/static/grill.jpg);
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}
#thai {
  height: 100%;
  min-height: 500px;
  padding-bottom: 50px;
  background-image: url(/static/thai.jpg);
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}

#kontakt {
  height: 100%;
  min-height: 350px;
  padding-bottom: 30px;
  background-image: url(/static/models.jpg);
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}

/* Change the map to an address if the screen is to small to display the full map */

#show_address{
  display: none;
}

#show_map{
    display: inline;
}

.menupadding{
  padding-top: 100px;
}

.title-style {
  background-color: rgb(218,17,17);
  font-family: Arial;
  font-weight: bold;
}

@media screen and (max-width: 375px) {
  #show_address{
    display: inline;
  }

  #show_map{
    display: none;
  }
  .table {
    font-size: 0.7rem;
  }
}


@media screen and (max-width: 600px) {
  #kontakt {
    background-image: url(/static/models.jpg);
    max-width: 100%;
    height: auto;
  }
}

#descrip{
  font-size: 20px;
}

#gmap{
  margin-bottom: 20px;
}

